--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_single.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_single.scss
@@ -127,7 +127,12 @@
     right: calc(-25% + 50px);
     width: 25%;
     .arrow {
-        transform: translateX(-15px) translateY(10px) rotate(-180deg);
+        @media (max-width: 768px) {
+            transform: translateX(-15px) translateY(10px) rotate(-180deg);
+        }
+        @media (min-width: 769px) {
+            transform: rotate(-180deg);
+        }
     }
 }
 @media (max-width: 768px) {
@@ -146,9 +151,17 @@
         }
     }
     .work-text.onright {
-        right: calc(-100% + 20px);
-        width: 100%;
-        background-color: transparent;
+        @media (max-width: 768px) {
+            width: 100%;
+            right: calc(-100% + 20px);
+            background-color: transparent;
+        }
+        @media (min-width: 769px) {
+            width: calc(100% + 25px);
+            right: -100%;
+            padding: 10px 0;
+            background-color: transparent;
+        }
         .work-exponation {
             margin-left: 20px;
         }
